k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: go-app-deployment
  namespace: go
  labels:
    app: go-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      name: go-app-pod
      labels:
        app: go-app
    spec:
      containers:
        - name: go-web-app
          image: viraldobariya33/go-app:2.0.1
          ports:
            - containerPort: 8080
