k8s/manifests/service.yml
apiVersion: v1
kind: Service

metadata:
  name: go-app-service
  namespace: go
  labels:
    app: go-app

spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    - targetPort: 8080
      port: 80
      protocol: TCP
