k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: go-app-ingress 
  namespace: go
  labels:
    app: go-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - host: goapp.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: go-app-service
              port:
                number: 80
